--- a/AlgorithmGossip/EightQueen.htm
+++ b/AlgorithmGossip/EightQueen.htm
@@ -21,14 +21,14 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
   
   
   
-  <title>¤K­Ó¬Ó¦Z</title>
+  <title>å…«å€‹çš‡å</title>
 </head>
 
 
@@ -41,31 +41,31 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ¤K­Ó¬Ó¦Z</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: å…«å€‹çš‡å</a></h1>
 
 
 
-<h2>&nbsp;»¡©ú</h2>
-¦è¬v´Ñ¤¤ªº¬Ó¦Z¥i¥Hª½½u«e¶i¡A¦Y±¼¹J¨ìªº©Ò¦³´Ñ¤l¡A¦pªG´Ñ½L¤W¦³¤K­Ó¬Ó¦Z¡A«h³o¤K­Ó¬Ó¦Z¦p¦ó¬Û¦wµL¨Æªº©ñ¸m¦b´Ñ½L¤W¡A1970¦~»P1971¦~¡A E.W.Dijkstra»PN.Wirth´¿¸g¥Î³o­Ó°İÃD¨ÓÁ¿¸Ñµ{¦¡³]­p¤§§Ş¥©¡C<br>
-<h2>¸Ñªk</h2>
-Ãö©ó´Ñ½Lªº°İÃD¡A³£¥i¥H¥Î»¼°j¨D¸Ñ¡AµM¦Ó¦p¦ó´î¤Ö»¼°jªº¦¸¼Æ¡H¦b¤K­Ó¬Ó¦Zªº°İÃD¤¤¡A¤£¥²­n©Ò¦³ªº®æ¤l³£ÀË¬d¹L¡A¨Ò¦p­Y¬Y¦CÀË¬d¹L¡A¸Ó¸Ó¦Cªº¨ä¥¦®æ¤l´N¤£¥Î¦AÀË¬d¤F¡A³o­Ó¤èªkºÙ¬°¤À¤ä­×°Å¡C <br>
-<div style="text-align: center;"><img style="width: 169px; height: 167px;" alt="¤K­Ó¬Ó¦Z" title="¤K­Ó¬Ó¦Z" src="images/eightQueen-1.jpg"><br>
+<h2>&nbsp;èªªæ˜</h2>
+è¥¿æ´‹æ£‹ä¸­çš„çš‡åå¯ä»¥ç›´ç·šå‰é€²ï¼Œåƒæ‰é‡åˆ°çš„æ‰€æœ‰æ£‹å­ï¼Œå¦‚æœæ£‹ç›¤ä¸Šæœ‰å…«å€‹çš‡åï¼Œå‰‡é€™å…«å€‹çš‡åå¦‚ä½•ç›¸å®‰ç„¡äº‹çš„æ”¾ç½®åœ¨æ£‹ç›¤ä¸Šï¼Œ1970å¹´èˆ‡1971å¹´ï¼Œ E.W.Dijkstraèˆ‡N.Wirthæ›¾ç¶“ç”¨é€™å€‹å•é¡Œä¾†è¬›è§£ç¨‹å¼è¨­è¨ˆä¹‹æŠ€å·§ã€‚<br>
+<h2>è§£æ³•</h2>
+é—œæ–¼æ£‹ç›¤çš„å•é¡Œï¼Œéƒ½å¯ä»¥ç”¨éè¿´æ±‚è§£ï¼Œç„¶è€Œå¦‚ä½•æ¸›å°‘éè¿´çš„æ¬¡æ•¸ï¼Ÿåœ¨å…«å€‹çš‡åçš„å•é¡Œä¸­ï¼Œä¸å¿…è¦æ‰€æœ‰çš„æ ¼å­éƒ½æª¢æŸ¥éï¼Œä¾‹å¦‚è‹¥æŸåˆ—æª¢æŸ¥éï¼Œè©²è©²åˆ—çš„å…¶å®ƒæ ¼å­å°±ä¸ç”¨å†æª¢æŸ¥äº†ï¼Œé€™å€‹æ–¹æ³•ç¨±ç‚ºåˆ†æ”¯ä¿®å‰ªã€‚ <br>
+<div style="text-align: center;"><img style="width: 169px; height: 167px;" alt="å…«å€‹çš‡å" title="å…«å€‹çš‡å" src="images/eightQueen-1.jpg"><br>
 <br>
 <br>
-©Ò¥HÀË¬d®É¡A¥ı§PÂ_¬O§_¦b¤w©ñ¸m¬Ó¦Zªº¥i¦æ¶i¤è¦V¤W¡A¦pªG¨S¦³¦A¦æ©ñ¸m¤U¤@­Ó¬Ó¦Z¡A¦p¦¹´N¥i¤j¤j´î¤Ö»¼°jªº¦¸¼Æ¡A¨Ò¦p¥H¤U¬°­×°Å¹L«áªº»¼°jÀË¬d¦æ¶i¸ô®|¡G<br>
-<img style="width: 517px; height: 229px;" alt="¤K­Ó¬Ó¦Z" title="¤K­Ó¬Ó¦Z" src="images/eightQueen-2.jpg"><br>
+æ‰€ä»¥æª¢æŸ¥æ™‚ï¼Œå…ˆåˆ¤æ–·æ˜¯å¦åœ¨å·²æ”¾ç½®çš‡åçš„å¯è¡Œé€²æ–¹å‘ä¸Šï¼Œå¦‚æœæ²’æœ‰å†è¡Œæ”¾ç½®ä¸‹ä¸€å€‹çš‡åï¼Œå¦‚æ­¤å°±å¯å¤§å¤§æ¸›å°‘éè¿´çš„æ¬¡æ•¸ï¼Œä¾‹å¦‚ä»¥ä¸‹ç‚ºä¿®å‰ªéå¾Œçš„éè¿´æª¢æŸ¥è¡Œé€²è·¯å¾‘ï¼š<br>
+<img style="width: 517px; height: 229px;" alt="å…«å€‹çš‡å" title="å…«å€‹çš‡å" src="images/eightQueen-2.jpg"><br>
 <div style="text-align: left;"><br>
-¤K­Ó¬Ó¦Zªº¸Ü¡A·|¦³92­Ó¸Ñµª¡A¦pªG¦Ò¼{´Ñ½Lªº±ÛÂà¡A«h±ÛÂà«á¦©¥h¹ïºÙªº¡A·|¦³12²Õ°ò¥»¸Ñ¡C&nbsp;</div>
+å…«å€‹çš‡åçš„è©±ï¼Œæœƒæœ‰92å€‹è§£ç­”ï¼Œå¦‚æœè€ƒæ…®æ£‹ç›¤çš„æ—‹è½‰ï¼Œå‰‡æ—‹è½‰å¾Œæ‰£å»å°ç¨±çš„ï¼Œæœƒæœ‰12çµ„åŸºæœ¬è§£ã€‚&nbsp;</div>
 </div>
 <br>
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define N 8 <br><br>int column[N+1]; // ¦PÄæ¬O§_¦³¬Ó¦Z¡A1ªí¥Ü¦³ <br>int rup[2*N+1]; // ¥k¤W¦Ü¥ª¤U¬O§_¦³¬Ó¦Z <br>int lup[2*N+1]; // ¥ª¤W¦Ü¥k¤U¬O§_¦³¬Ó¦Z <br>int queen[N+1] = {0}; <br>int num; // ¸Ñµª½s¸¹ <br><br>void backtrack(int); // »¼°j¨D¸Ñ <br><br>int main(void) { <br>    int i; <br>    num = 0; <br><br>    for(i = 1; i &lt;= N; i++) <br>        column[i] = 1; <br><br>    for(i = 1; i &lt;= 2*N; i++) <br>        rup[i] = lup[i] = 1; <br><br>    backtrack(1); <br><br>    return 0; <br>} <br><br>void showAnswer() {<br>    int x, y;<br>    printf("\n¸Ñµª %d\n", ++num);<br>    for(y = 1; y &lt;= N; y++) {<br>        for(x = 1; x &lt;= N; x++) {<br>            if(queen[y] == x) {<br>                printf(" Q");<br>            }<br>            else {<br>                printf(" .");<br>            }<br>        }<br>        printf("\n");<br>    }<br>}<br><br>void backtrack(int i) { <br>    int j;<br><br>    if(i &gt; N) { <br>        showAnswer();<br>    } <br>    else { <br>        for(j = 1; j &lt;= N; j++) { <br>            if(column[j] == 1 &amp;&amp; <br>                 rup[i+j] == 1 &amp;&amp; lup[i-j+N] == 1) { <br>                queen[i] = j; <br>                // ³]©w¬°¦û¥Î<br>                column[j] = rup[i+j] = lup[i-j+N] = 0; <br>                backtrack(i+1); <br>                column[j] = rup[i+j] = lup[i-j+N] = 1; <br>            } <br>        } <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define N 8 <br><br>int column[N+1]; // åŒæ¬„æ˜¯å¦æœ‰çš‡åï¼Œ1è¡¨ç¤ºæœ‰ <br>int rup[2*N+1]; // å³ä¸Šè‡³å·¦ä¸‹æ˜¯å¦æœ‰çš‡å <br>int lup[2*N+1]; // å·¦ä¸Šè‡³å³ä¸‹æ˜¯å¦æœ‰çš‡å <br>int queen[N+1] = {0}; <br>int num; // è§£ç­”ç·¨è™Ÿ <br><br>void backtrack(int); // éè¿´æ±‚è§£ <br><br>int main(void) { <br>    int i; <br>    num = 0; <br><br>    for(i = 1; i &lt;= N; i++) <br>        column[i] = 1; <br><br>    for(i = 1; i &lt;= 2*N; i++) <br>        rup[i] = lup[i] = 1; <br><br>    backtrack(1); <br><br>    return 0; <br>} <br><br>void showAnswer() {<br>    int x, y;<br>    printf("\nè§£ç­” %d\n", ++num);<br>    for(y = 1; y &lt;= N; y++) {<br>        for(x = 1; x &lt;= N; x++) {<br>            if(queen[y] == x) {<br>                printf(" Q");<br>            }<br>            else {<br>                printf(" .");<br>            }<br>        }<br>        printf("\n");<br>    }<br>}<br><br>void backtrack(int i) { <br>    int j;<br><br>    if(i &gt; N) { <br>        showAnswer();<br>    } <br>    else { <br>        for(j = 1; j &lt;= N; j++) { <br>            if(column[j] == 1 &amp;&amp; <br>                 rup[i+j] == 1 &amp;&amp; lup[i-j+N] == 1) { <br>                queen[i] = j; <br>                // è¨­å®šç‚ºä½”ç”¨<br>                column[j] = rup[i+j] = lup[i-j+N] = 0; <br>                backtrack(i+1); <br>                column[j] = rup[i+j] = lup[i-j+N] = 1; <br>            } <br>        } <br>    } <br>} <br></pre>
 
 <br>
 
@@ -74,7 +74,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>public class Queen {<br>    // ¦PÄæ¬O§_¦³¬Ó¦Z¡A1ªí¥Ü¦³ <br>    private int[] column;<br>    // ¥k¤W¦Ü¥ª¤U¬O§_¦³¬Ó¦Z<br>    private int[] rup; <br>    // ¥ª¤W¦Ü¥k¤U¬O§_¦³¬Ó¦Z<br>    private int[] lup;<br>    // ¸Ñµª<br>    private int[] queen;<br>    <br>    // ¸Ñµª½s¸¹<br>    private int num;<br>    <br>    public Queen() {<br>        column = new int[8+1];<br>        rup = new int[2*8+1];<br>        lup = new int[2*8+1];<br>        <br>        for(int i = 1; i &lt;= 8; i++) <br>            column[i] = 1; <br><br>        for(int i = 1; i &lt;= 2*8; i++) <br>            rup[i] = lup[i] = 1; <br>        <br>        queen = new int[8+1];<br>    }<br>    <br>    public void backtrack(int i) {<br>        if(i &gt; 8) { <br>            showAnswer();<br>        } <br>        else { <br>            for(int j = 1; j &lt;= 8; j++) { <br>                if(column[j] == 1 &amp;&amp; <br>                   rup[i+j] == 1 &amp;&amp; <br>                   lup[i-j+8] == 1) { <br>                    queen[i] = j; <br>                    // ³]©w¬°¦û¥Î<br>                    column[j] = rup[i+j] = lup[i-j+8] = 0; <br>                    backtrack(i+1); <br>                    column[j] = rup[i+j] = lup[i-j+8] = 1; <br>                } <br>            } <br>        } <br>    }<br>    <br>    protected void showAnswer() {<br>        num++;<br>        System.out.println("\n¸Ñµª " + num);<br>        for(int y = 1; y &lt;= 8; y++) {<br>            for(int x = 1; x &lt;= 8; x++) {<br>                if(queen[y] == x) {<br>                    System.out.print(" Q");<br>                }<br>                else {<br>                    System.out.print(" .");<br>                }<br>            }<br>            System.out.println();<br>        }<br>    }<br>    <br>    public static void main(String[] args) {<br>        Queen queen = new Queen();<br>        queen.backtrack(1);<br>    }<br>} </pre>
+<pre>public class Queen {<br>    // åŒæ¬„æ˜¯å¦æœ‰çš‡åï¼Œ1è¡¨ç¤ºæœ‰ <br>    private int[] column;<br>    // å³ä¸Šè‡³å·¦ä¸‹æ˜¯å¦æœ‰çš‡å<br>    private int[] rup; <br>    // å·¦ä¸Šè‡³å³ä¸‹æ˜¯å¦æœ‰çš‡å<br>    private int[] lup;<br>    // è§£ç­”<br>    private int[] queen;<br>    <br>    // è§£ç­”ç·¨è™Ÿ<br>    private int num;<br>    <br>    public Queen() {<br>        column = new int[8+1];<br>        rup = new int[2*8+1];<br>        lup = new int[2*8+1];<br>        <br>        for(int i = 1; i &lt;= 8; i++) <br>            column[i] = 1; <br><br>        for(int i = 1; i &lt;= 2*8; i++) <br>            rup[i] = lup[i] = 1; <br>        <br>        queen = new int[8+1];<br>    }<br>    <br>    public void backtrack(int i) {<br>        if(i &gt; 8) { <br>            showAnswer();<br>        } <br>        else { <br>            for(int j = 1; j &lt;= 8; j++) { <br>                if(column[j] == 1 &amp;&amp; <br>                   rup[i+j] == 1 &amp;&amp; <br>                   lup[i-j+8] == 1) { <br>                    queen[i] = j; <br>                    // è¨­å®šç‚ºä½”ç”¨<br>                    column[j] = rup[i+j] = lup[i-j+8] = 0; <br>                    backtrack(i+1); <br>                    column[j] = rup[i+j] = lup[i-j+8] = 1; <br>                } <br>            } <br>        } <br>    }<br>    <br>    protected void showAnswer() {<br>        num++;<br>        System.out.println("\nè§£ç­” " + num);<br>        for(int y = 1; y &lt;= 8; y++) {<br>            for(int x = 1; x &lt;= 8; x++) {<br>                if(queen[y] == x) {<br>                    System.out.print(" Q");<br>                }<br>                else {<br>                    System.out.print(" .");<br>                }<br>            }<br>            System.out.println();<br>        }<br>    }<br>    <br>    public static void main(String[] args) {<br>        Queen queen = new Queen();<br>        queen.backtrack(1);<br>    }<br>} </pre>
 <br>
 <br>
 <br>
