--- a/AlgorithmGossip/EratosthenesPrime.htm
+++ b/AlgorithmGossip/EratosthenesPrime.htm
@@ -21,14 +21,14 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
   
   
   
-  <title>Eratosthenes¿z¿ï¨D½è¼Æ</title>
+  <title>Eratosthenesç¯©é¸æ±‚è³ªæ•¸</title>
 </head>
 
 
@@ -41,45 +41,45 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;Eratosthenes¿z¿ï¨D½è¼Æ</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;Eratosthenesç¯©é¸æ±‚è³ªæ•¸</a></h1>
 
 
 
-<h2>»¡©ú</h2>
-°£¤F¦Û¨­¤§¥~¡AµLªk³Q¨ä¥¦¾ã¼Æ¾ã°£ªº¼ÆºÙ¤§¬°½è¼Æ¡A­n¨D½è¼Æ«ÜÂ²³æ¡A¦ı¦p¦ó§Ö³tªº¨D¥X½è¼Æ«h¤@ª½¬Oµ{¦¡³]­p¤H­û»P¼Æ¾Ç®a§V¤Oªº½ÒÃD¡A¦b³oÃä¤¶²Ğ¤@­ÓµÛ¦Wªº Eratosthenes¨D½è¼Æ¤èªk¡C<br>
-<h2>¸Ñªk</h2>
-­º¥ıª¾¹D³o­Ó°İÃD¥i¥H¨Ï¥Î°j°é¨Ó¨D¸Ñ¡A±N¤@­Ó«ü©wªº¼Æ°£¥H©Ò¦³¤p©ó¥¦ªº¼Æ¡A­Y¥i¥H¾ã°£´N¤£¬O½è¼Æ¡AµM¦Ó¦p¦ó´î¤Ö°j°éªºÀË¬d¦¸¼Æ¡H¦p¦ó¨D¥X¤p©óNªº©Ò¦³½è¼Æ¡H<br>
+<h2>èªªæ˜</h2>
+é™¤äº†è‡ªèº«ä¹‹å¤–ï¼Œç„¡æ³•è¢«å…¶å®ƒæ•´æ•¸æ•´é™¤çš„æ•¸ç¨±ä¹‹ç‚ºè³ªæ•¸ï¼Œè¦æ±‚è³ªæ•¸å¾ˆç°¡å–®ï¼Œä½†å¦‚ä½•å¿«é€Ÿçš„æ±‚å‡ºè³ªæ•¸å‰‡ä¸€ç›´æ˜¯ç¨‹å¼è¨­è¨ˆäººå“¡èˆ‡æ•¸å­¸å®¶åŠªåŠ›çš„èª²é¡Œï¼Œåœ¨é€™é‚Šä»‹ç´¹ä¸€å€‹è‘—åçš„ Eratosthenesæ±‚è³ªæ•¸æ–¹æ³•ã€‚<br>
+<h2>è§£æ³•</h2>
+é¦–å…ˆçŸ¥é“é€™å€‹å•é¡Œå¯ä»¥ä½¿ç”¨è¿´åœˆä¾†æ±‚è§£ï¼Œå°‡ä¸€å€‹æŒ‡å®šçš„æ•¸é™¤ä»¥æ‰€æœ‰å°æ–¼å®ƒçš„æ•¸ï¼Œè‹¥å¯ä»¥æ•´é™¤å°±ä¸æ˜¯è³ªæ•¸ï¼Œç„¶è€Œå¦‚ä½•æ¸›å°‘è¿´åœˆçš„æª¢æŸ¥æ¬¡æ•¸ï¼Ÿå¦‚ä½•æ±‚å‡ºå°æ–¼Nçš„æ‰€æœ‰è³ªæ•¸ï¼Ÿ<br>
 <br>
-­º¥ı°²³]­nÀË¬dªº¼Æ¬ON¦n¤F¡A«h¨Æ¹ê¤W¥u­nÀË¬d¦ÜNªº¶}®Ú¸¹´N¥i¥H¤F¡A¹D²z«ÜÂ²³æ¡A°²³]A*B =
-N¡A¦pªGA¤j©óNªº¶}®Ú¸¹¡A«h¨Æ¹ê¤W¦b¤p©óA¤§«eªºÀË¬d´N¥i¥H¥ıÀË¬d¨ìB³o­Ó¼Æ¥i¥H¾ã°£N¡C¤£¹L¦bµ{¦¡¤¤¨Ï¥Î¶}®Ú¸¹·|ºë½T«×ªº°İÃD¡A©Ò¥H¥i¥H¨Ï¥Î
-i*i &lt;= N¶i¦æÀË¬d¡A¥B°õ¦æ§ó§Ö¡C<br>
+é¦–å…ˆå‡è¨­è¦æª¢æŸ¥çš„æ•¸æ˜¯Nå¥½äº†ï¼Œå‰‡äº‹å¯¦ä¸Šåªè¦æª¢æŸ¥è‡³Nçš„é–‹æ ¹è™Ÿå°±å¯ä»¥äº†ï¼Œé“ç†å¾ˆç°¡å–®ï¼Œå‡è¨­A*B =
+Nï¼Œå¦‚æœAå¤§æ–¼Nçš„é–‹æ ¹è™Ÿï¼Œå‰‡äº‹å¯¦ä¸Šåœ¨å°æ–¼Aä¹‹å‰çš„æª¢æŸ¥å°±å¯ä»¥å…ˆæª¢æŸ¥åˆ°Bé€™å€‹æ•¸å¯ä»¥æ•´é™¤Nã€‚ä¸éåœ¨ç¨‹å¼ä¸­ä½¿ç”¨é–‹æ ¹è™Ÿæœƒç²¾ç¢ºåº¦çš„å•é¡Œï¼Œæ‰€ä»¥å¯ä»¥ä½¿ç”¨
+i*i &lt;= Né€²è¡Œæª¢æŸ¥ï¼Œä¸”åŸ·è¡Œæ›´å¿«ã€‚<br>
 <br>
-¦A¨Ó°²³]¦³¤@­Ó¿z¤l¦s©ñ1¡ãN¡A¨Ò¦p¡G<br>
-<div style="margin-left: 40px;"><span style="font-weight: bold;">2¡@3¡@4¡@5¡@6¡@7¡@8¡@9¡@10¡@11¡@12¡@13¡@14¡@15¡@16¡@17¡@18¡@19¡@20¡@21 ........ N</span><br>
+å†ä¾†å‡è¨­æœ‰ä¸€å€‹ç¯©å­å­˜æ”¾1ï½Nï¼Œä¾‹å¦‚ï¼š<br>
+<div style="margin-left: 40px;"><span style="font-weight: bold;">2ã€€3ã€€4ã€€5ã€€6ã€€7ã€€8ã€€9ã€€10ã€€11ã€€12ã€€13ã€€14ã€€15ã€€16ã€€17ã€€18ã€€19ã€€20ã€€21 ........ N</span><br>
 </div>
 <br>
-¥ı±N2ªº­¿¼Æ¿z¥h¡G<br>
-<div style="margin-left: 40px;"><span style="font-weight: bold;">2¡@3¡@5¡@7¡@9¡@11¡@13¡@15¡@17¡@19¡@21 ........ N</span><br>
+å…ˆå°‡2çš„å€æ•¸ç¯©å»ï¼š<br>
+<div style="margin-left: 40px;"><span style="font-weight: bold;">2ã€€3ã€€5ã€€7ã€€9ã€€11ã€€13ã€€15ã€€17ã€€19ã€€21 ........ N</span><br>
 </div>
 <br>
-¦A±N3ªº­¿¼Æ¿z¥h¡G<br>
-<div style="margin-left: 40px;"><span style="font-weight: bold;">2¡@3¡@5¡@7¡@11¡@13¡@17¡@19¡@........ N</span><br>
+å†å°‡3çš„å€æ•¸ç¯©å»ï¼š<br>
+<div style="margin-left: 40px;"><span style="font-weight: bold;">2ã€€3ã€€5ã€€7ã€€11ã€€13ã€€17ã€€19ã€€........ N</span><br>
 </div>
 <br>
-¦A¨Ó±N5ªº­¿¼Æ¿z¥h¡A¦A¨Ó±N7ªº½è¼Æ¿z¥h¡A¦A¨Ó±N11ªº­¿¼Æ¿z¥h........¡A¦p¦¹¶i¦æ¨ì³Ì«á¯d¤Uªº¼Æ´N³£¬O½è¼Æ¡A³o´N¬OEratosthenes¿z¿ï¤èªk¡]Eratosthenes Sieve Method¡^¡C<br>
+å†ä¾†å°‡5çš„å€æ•¸ç¯©å»ï¼Œå†ä¾†å°‡7çš„è³ªæ•¸ç¯©å»ï¼Œå†ä¾†å°‡11çš„å€æ•¸ç¯©å»........ï¼Œå¦‚æ­¤é€²è¡Œåˆ°æœ€å¾Œç•™ä¸‹çš„æ•¸å°±éƒ½æ˜¯è³ªæ•¸ï¼Œé€™å°±æ˜¯Eratosthenesç¯©é¸æ–¹æ³•ï¼ˆEratosthenes Sieve Methodï¼‰ã€‚<br>
 <br>
-ÀË¬dªº¦¸¼ÆÁÙ¥i¥H¦A´î¤Ö¡A¨Æ¹ê¤W¡A¥u­nÀË¬d6n+1»P6n+5´N¥i¥H¤F¡A¤]´N¬Oª½±µ¸õ¹L2»P3ªº­¿¼Æ¡A¨Ï±oµ{¦¡¤¤ªºifªºÀË¬d°Ê§@¥i¥H´î¤Ö¡C <br>
+æª¢æŸ¥çš„æ¬¡æ•¸é‚„å¯ä»¥å†æ¸›å°‘ï¼Œäº‹å¯¦ä¸Šï¼Œåªè¦æª¢æŸ¥6n+1èˆ‡6n+5å°±å¯ä»¥äº†ï¼Œä¹Ÿå°±æ˜¯ç›´æ¥è·³é2èˆ‡3çš„å€æ•¸ï¼Œä½¿å¾—ç¨‹å¼ä¸­çš„ifçš„æª¢æŸ¥å‹•ä½œå¯ä»¥æ¸›å°‘ã€‚ <br>
 
 
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define N 1000 <br><br>int main(void) { <br>    int i, j; <br>    int prime[N+1]; <br><br>    for(i = 2; i &lt;= N; i++) <br>        prime[i] = 1; <br><br>    for(i = 2; i*i &lt;= N; i++) { // ³oÃä¥i¥H§ï¶i <br>        if(prime[i] == 1) { <br>            for(j = 2*i; j &lt;= N; j++) { <br>                if(j % i == 0) <br>                    prime[j] = 0; <br>            } <br>        } <br>    } <br><br>    for(i = 2; i &lt; N; i++) { <br>        if(prime[i] == 1) { <br>            printf("%4d ", i); <br>            if(i % 16 == 0) <br>                printf("\n"); <br>        } <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define N 1000 <br><br>int main(void) { <br>    int i, j; <br>    int prime[N+1]; <br><br>    for(i = 2; i &lt;= N; i++) <br>        prime[i] = 1; <br><br>    for(i = 2; i*i &lt;= N; i++) { // é€™é‚Šå¯ä»¥æ”¹é€² <br>        if(prime[i] == 1) { <br>            for(j = 2*i; j &lt;= N; j++) { <br>                if(j % i == 0) <br>                    prime[j] = 0; <br>            } <br>        } <br>    } <br><br>    for(i = 2; i &lt; N; i++) { <br>        if(prime[i] == 1) { <br>            printf("%4d ", i); <br>            if(i % 16 == 0) <br>                printf("\n"); <br>        } <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br></pre>
 
 <br>
 
@@ -88,7 +88,7 @@ i*i &lt;= N¶i¦æÀË¬d¡A¥B°õ¦æ§ó§Ö¡C<br>
   </li>
 </ul>
 
-<pre>import java.util.*;<br><br>public class Prime {    <br>    public static int[] findPrimes(final int max) { <br>        int[] prime = new int[max+1]; <br>        ArrayList list = new ArrayList();<br><br>        for(int i = 2; i &lt;= max; i++) <br>            prime[i] = 1; <br><br>        for(int i = 2; i*i &lt;= max; i++) { // ³oÃä¥i¥H§ï¶i <br>            if(prime[i] == 1) { <br>                for(int j = 2*i; j &lt;= max; j++) { <br>                    if(j % i == 0) <br>                        prime[j] = 0; <br>                } <br>            } <br>        } <br><br>        for(int i = 2; i &lt; max; i++) { <br>            if(prime[i] == 1) { <br>                list.add(new Integer(i)); <br>            } <br>        }<br>        <br>        int[] p = new int[list.size()];<br>        Object[] objs = list.toArray(); <br>        for(int i = 0; i &lt; p.length; i++) {<br>            p[i] = ((Integer) objs[i]).intValue();<br>        }<br>        <br>        return p;<br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] prime = Prime.findPrimes(1000);<br>        <br>        for(int i = 0; i &lt; prime.length; i++) {<br>            System.out.print(prime[i] + " ");<br>        }<br>        <br>        System.out.println();<br>    }<br>}</pre>
+<pre>import java.util.*;<br><br>public class Prime {    <br>    public static int[] findPrimes(final int max) { <br>        int[] prime = new int[max+1]; <br>        ArrayList list = new ArrayList();<br><br>        for(int i = 2; i &lt;= max; i++) <br>            prime[i] = 1; <br><br>        for(int i = 2; i*i &lt;= max; i++) { // é€™é‚Šå¯ä»¥æ”¹é€² <br>            if(prime[i] == 1) { <br>                for(int j = 2*i; j &lt;= max; j++) { <br>                    if(j % i == 0) <br>                        prime[j] = 0; <br>                } <br>            } <br>        } <br><br>        for(int i = 2; i &lt; max; i++) { <br>            if(prime[i] == 1) { <br>                list.add(new Integer(i)); <br>            } <br>        }<br>        <br>        int[] p = new int[list.size()];<br>        Object[] objs = list.toArray(); <br>        for(int i = 0; i &lt; p.length; i++) {<br>            p[i] = ((Integer) objs[i]).intValue();<br>        }<br>        <br>        return p;<br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] prime = Prime.findPrimes(1000);<br>        <br>        for(int i = 0; i &lt; prime.length; i++) {<br>            System.out.print(prime[i] + " ");<br>        }<br>        <br>        System.out.println();<br>    }<br>}</pre>
 <br>
 <br>
 
