--- a/AlgorithmGossip/FibonacciSearch.htm
+++ b/AlgorithmGossip/FibonacciSearch.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>¶O¤ó·j´Mªk</title>
+  <title>è²»æ°æœå°‹æ³•</title>
 </head>
 
 
@@ -61,21 +61,21 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;¶O¤ó·j´Mªk</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;è²»æ°æœå°‹æ³•</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-¤G¤À·j´Mªk¨C¦¸·j´M®É¡A³£·|±N·j´M°Ï¶¡¤À¬°¤@¥b¡A©Ò¥H¨ä·j´M®É¶¡¬°O(log(2)n)¡Alog(2)ªí¥Ü¥H2¬°©³ªºlog­È¡A³oÃä­n¤¶²Ğªº¶O¤ó·j´M¡A¨ä§Q¥Î¶O¤ó¼Æ¦C§@¬°¶¡¹j¨Ó·j´M¤U¤@­Ó¼Æ¡A©Ò¥H°Ï¶¡¦¬ÀÄªº³t«×§ó§Ö¡A·j´M®É¶¡¬°O(logn)¡C<br>
+äºŒåˆ†æœå°‹æ³•æ¯æ¬¡æœå°‹æ™‚ï¼Œéƒ½æœƒå°‡æœå°‹å€é–“åˆ†ç‚ºä¸€åŠï¼Œæ‰€ä»¥å…¶æœå°‹æ™‚é–“ç‚ºO(log(2)n)ï¼Œlog(2)è¡¨ç¤ºä»¥2ç‚ºåº•çš„logå€¼ï¼Œé€™é‚Šè¦ä»‹ç´¹çš„è²»æ°æœå°‹ï¼Œå…¶åˆ©ç”¨è²»æ°æ•¸åˆ—ä½œç‚ºé–“éš”ä¾†æœå°‹ä¸‹ä¸€å€‹æ•¸ï¼Œæ‰€ä»¥å€é–“æ”¶æ–‚çš„é€Ÿåº¦æ›´å¿«ï¼Œæœå°‹æ™‚é–“ç‚ºO(logn)ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¶O¤ó·j´M¨Ï¥Î¶O¤ó¼Æ¦C¨Ó¨M©w¤U¤@­Ó¼Æªº·j´M¦ì¸m¡A©Ò¥H¥²¶·¥ı»s§@¶O¤ó¼Æ¦C¡A³o¦b¤§«e¦³´£¹L¡F¶O¤ó·j´M·|¥ı³z¹L¤½¦¡­pºâ¨D¥X²Ä¤@­Ó­n·j´M¼Æªº¦ì¸m¡A¥H¤Î¨ä¥N
-ªíªº¶O¤ó¼Æ¡A¥H·j´M¹ï¶H10­Ó¼Æ¦r¨Ó»¡¡A²Ä¤@­Ó¶O¤ó¼Æ¸g­pºâ«á¤@©w¬OF5¡A¦Ó²Ä¤@­Ó­n·j´Mªº¦ì¸m¦³¨â­Ó¥i¯à¡A¨Ò¦p­Y¦b¤U­±ªº¼Æ¦C·j´Mªº¸Ü¡]¬°¤F­pºâ¤è«K¡A
-³q±`·|±N¯Á¤Ş0­q§@µL­­¤pªº¼Æ¡A¦Ó¼Æ¦C¥Ñ¯Á¤Ş1¶}©l¡^¡G<br>
+è²»æ°æœå°‹ä½¿ç”¨è²»æ°æ•¸åˆ—ä¾†æ±ºå®šä¸‹ä¸€å€‹æ•¸çš„æœå°‹ä½ç½®ï¼Œæ‰€ä»¥å¿…é ˆå…ˆè£½ä½œè²»æ°æ•¸åˆ—ï¼Œé€™åœ¨ä¹‹å‰æœ‰æéï¼›è²»æ°æœå°‹æœƒå…ˆé€éå…¬å¼è¨ˆç®—æ±‚å‡ºç¬¬ä¸€å€‹è¦æœå°‹æ•¸çš„ä½ç½®ï¼Œä»¥åŠå…¶ä»£
+è¡¨çš„è²»æ°æ•¸ï¼Œä»¥æœå°‹å°è±¡10å€‹æ•¸å­—ä¾†èªªï¼Œç¬¬ä¸€å€‹è²»æ°æ•¸ç¶“è¨ˆç®—å¾Œä¸€å®šæ˜¯F5ï¼Œè€Œç¬¬ä¸€å€‹è¦æœå°‹çš„ä½ç½®æœ‰å…©å€‹å¯èƒ½ï¼Œä¾‹å¦‚è‹¥åœ¨ä¸‹é¢çš„æ•¸åˆ—æœå°‹çš„è©±ï¼ˆç‚ºäº†è¨ˆç®—æ–¹ä¾¿ï¼Œ
+é€šå¸¸æœƒå°‡ç´¢å¼•0è¨‚ä½œç„¡é™å°çš„æ•¸ï¼Œè€Œæ•¸åˆ—ç”±ç´¢å¼•1é–‹å§‹ï¼‰ï¼š<br>
 
 <br>
 <span style="font-family: Courier New,Courier,monospace;">
@@ -83,20 +83,20 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¦pªG­n·j´M5ªº¸Ü¡A«h¥Ñ¯Á¤ŞF5 = 5¶}©l·j´M¡A±µ¤U¨Ó¦pªG¼Æ¦C¤¤ªº¼Æ¤p©ó«ü©w·j´M­È®É¡A´N©¹¥ª§ä¡A¤j©ó®É´N¦V¥k¡A¨C¦¸§äªº¶¡¹j¬OF4¡BF3¡BF2¨Ó´M§ä¡A·í¶O¤ó¼Æ¬°0®ÉÁÙ¨S§ä¨ì¡A´Nªí¥Ü´M§ä¥¢±Ñ¡A¦p¤U©Ò¥Ü¡G <br>
+å¦‚æœè¦æœå°‹5çš„è©±ï¼Œå‰‡ç”±ç´¢å¼•F5 = 5é–‹å§‹æœå°‹ï¼Œæ¥ä¸‹ä¾†å¦‚æœæ•¸åˆ—ä¸­çš„æ•¸å°æ–¼æŒ‡å®šæœå°‹å€¼æ™‚ï¼Œå°±å¾€å·¦æ‰¾ï¼Œå¤§æ–¼æ™‚å°±å‘å³ï¼Œæ¯æ¬¡æ‰¾çš„é–“éš”æ˜¯F4ã€F3ã€F2ä¾†å°‹æ‰¾ï¼Œç•¶è²»æ°æ•¸ç‚º0æ™‚é‚„æ²’æ‰¾åˆ°ï¼Œå°±è¡¨ç¤ºå°‹æ‰¾å¤±æ•—ï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼š <br>
 
 
-<div style="text-align: center;"><img style="width: 232px; height: 123px;" alt="¶O¦¡·j´M" title="¶O¦¡·j´M" src="images/fibonacciSearch-1.jpg"><br>
+<div style="text-align: center;"><img style="width: 232px; height: 123px;" alt="è²»å¼æœå°‹" title="è²»å¼æœå°‹" src="images/fibonacciSearch-1.jpg"><br>
 
 <br>
 
-<div style="text-align: left;">¥Ñ©ó²Ä¤@­Ó·j´M­È¯Á¤ŞF5 = 5³Bªº­È¤p©ó19¡A©Ò¥H¦¹®É¥²¶·¹ï»ô¼Æ¦C¥k¤è¡A¤]´N¬O±N²Ä¤@­Ó·j´M­Èªº¯Á¤Ş§ï¬°F5+2 = 7¡AµM«á¦p¦P¤W­zªº¤è¦¡¶i¦æ·j´M¡A¦p¤U©Ò¥Ü¡G<br>
+<div style="text-align: left;">ç”±æ–¼ç¬¬ä¸€å€‹æœå°‹å€¼ç´¢å¼•F5 = 5è™•çš„å€¼å°æ–¼19ï¼Œæ‰€ä»¥æ­¤æ™‚å¿…é ˆå°é½Šæ•¸åˆ—å³æ–¹ï¼Œä¹Ÿå°±æ˜¯å°‡ç¬¬ä¸€å€‹æœå°‹å€¼çš„ç´¢å¼•æ”¹ç‚ºF5+2 = 7ï¼Œç„¶å¾Œå¦‚åŒä¸Šè¿°çš„æ–¹å¼é€²è¡Œæœå°‹ï¼Œå¦‚ä¸‹æ‰€ç¤ºï¼š<br>
 
 </div>
 
-<div style="text-align: center;"><img style="width: 234px; height: 138px;" alt="¶O¦¡·j´M" title="¶O¦¡·j´M" src="images/fibonacciSearch-2.jpg"></div>
+<div style="text-align: center;"><img style="width: 234px; height: 138px;" alt="è²»å¼æœå°‹" title="è²»å¼æœå°‹" src="images/fibonacciSearch-2.jpg"></div>
 
-<div style="text-align: left;">¦Ü©ó²Ä¤@­Ó·j´M­È¬O¦p¦ó§ä¨ìªº¡H§Ú­Ì¥i¥H¥Ñ¥H¤U³o­Ó¤½¦¡¨Ó¨D±o¡A¨ä¤¤n¬°·j´M¹ï¶Hªº­Ó¼Æ¡G<br>
+<div style="text-align: left;">è‡³æ–¼ç¬¬ä¸€å€‹æœå°‹å€¼æ˜¯å¦‚ä½•æ‰¾åˆ°çš„ï¼Ÿæˆ‘å€‘å¯ä»¥ç”±ä»¥ä¸‹é€™å€‹å…¬å¼ä¾†æ±‚å¾—ï¼Œå…¶ä¸­nç‚ºæœå°‹å°è±¡çš„å€‹æ•¸ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">F</span><sub style="font-weight: bold; font-family: Courier New,Courier,monospace;">x</sub><span style="font-weight: bold; font-family: Courier New,Courier,monospace;"> + m = n </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -108,7 +108,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¤]´N¬O»¡Fx¥²¶·§ä¨ì¤£¤j©ónªº¶O¤ó¼Æ¡A¥H10­Ó·j´M¹ï¶H¨Ó»¡¡G<br>
+ä¹Ÿå°±æ˜¯èªªFxå¿…é ˆæ‰¾åˆ°ä¸å¤§æ–¼nçš„è²»æ°æ•¸ï¼Œä»¥10å€‹æœå°‹å°è±¡ä¾†èªªï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">F</span><sub style="font-weight: bold; font-family: Courier New,Courier,monospace;">x</sub><span style="font-weight: bold; font-family: Courier New,Courier,monospace;"> + m = 10 </span><br>
 
@@ -118,22 +118,22 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¨úF<sub>x</sub> = 8, m = 2¡A©Ò¥H§Ú­Ì¥i¥H¹ï·Ó¶O¤ó¼Æ¦C±ox = 6¡AµM¦Ó²Ä¤@­Ó¼Æªº¥i¯à¦ì¸m¤§¤@¨Ã¤£¬OF6¡A¦Ó¬O²Äx-1ªº¶O¤ó¼Æ¡A¤]´N¬OF<sub>5</sub> = 5¡C<br>
+å–F<sub>x</sub> = 8, m = 2ï¼Œæ‰€ä»¥æˆ‘å€‘å¯ä»¥å°ç…§è²»æ°æ•¸åˆ—å¾—x = 6ï¼Œç„¶è€Œç¬¬ä¸€å€‹æ•¸çš„å¯èƒ½ä½ç½®ä¹‹ä¸€ä¸¦ä¸æ˜¯F6ï¼Œè€Œæ˜¯ç¬¬x-1çš„è²»æ°æ•¸ï¼Œä¹Ÿå°±æ˜¯F<sub>5</sub> = 5ã€‚<br>
 
 <br>
 
-¦pªG¼Æ¦Cnumber¦b¯Á¤Ş5³Bªº­È¤p©ó«ü©wªº·j´M­È¡A«h²Ä¤@­Ó·j´M¦ì¸m´N¬O¯Á¤Ş5ªº¦ì¸m¡A¦pªG¤j©ó«ü©wªº·j´M­È¡A«h²Ä¤@­Ó·j´M¦ì¸m¥²¶·¥[¤Wm¡A¤]´N¬OF<sub>5</sub> + m = 5 + 2 = 7¡A¤]´N¬O¯Á¤Ş7ªº¦ì¸m¡A¨ä¹ê¥[¤Wmªº­ì¦]¡A¬O¬°¤F­nÅı¤U¤@­Ó·j´M­È­è¦n¬O¼Æ¦Cªº³Ì«á¤@­Ó¦ì¸m¡C<br>
+å¦‚æœæ•¸åˆ—numberåœ¨ç´¢å¼•5è™•çš„å€¼å°æ–¼æŒ‡å®šçš„æœå°‹å€¼ï¼Œå‰‡ç¬¬ä¸€å€‹æœå°‹ä½ç½®å°±æ˜¯ç´¢å¼•5çš„ä½ç½®ï¼Œå¦‚æœå¤§æ–¼æŒ‡å®šçš„æœå°‹å€¼ï¼Œå‰‡ç¬¬ä¸€å€‹æœå°‹ä½ç½®å¿…é ˆåŠ ä¸Šmï¼Œä¹Ÿå°±æ˜¯F<sub>5</sub> + m = 5 + 2 = 7ï¼Œä¹Ÿå°±æ˜¯ç´¢å¼•7çš„ä½ç½®ï¼Œå…¶å¯¦åŠ ä¸Šmçš„åŸå› ï¼Œæ˜¯ç‚ºäº†è¦è®“ä¸‹ä¸€å€‹æœå°‹å€¼å‰›å¥½æ˜¯æ•¸åˆ—çš„æœ€å¾Œä¸€å€‹ä½ç½®ã€‚<br>
 
 <br>
 
-¶O¤ó·j´M¬İ¨ÓÃøÀ´¡A¦ı¥u­n´x´¤F<sub>x</sub> + m = n³o­Ó¤½¦¡¡A¦Û¤v§ä´X­Ó¹ê¨Òºâ¤@¦¸¡A«Ü®e©ö´N¥i¥H²z¸Ñ¡F¶O¤ó·j´M°£¤F¦¬ÀÄ§Ö³t¤§¥~¡A¥Ñ©ó¨ä¥»¨­¥u·|¨Ï¥Î¨ì¥[ªk»P´îªk¡A¦b¹Bºâ¤W¤]¥i¥H¥[§Ö¡C <br>
+è²»æ°æœå°‹çœ‹ä¾†é›£æ‡‚ï¼Œä½†åªè¦æŒæ¡F<sub>x</sub> + m = né€™å€‹å…¬å¼ï¼Œè‡ªå·±æ‰¾å¹¾å€‹å¯¦ä¾‹ç®—ä¸€æ¬¡ï¼Œå¾ˆå®¹æ˜“å°±å¯ä»¥ç†è§£ï¼›è²»æ°æœå°‹é™¤äº†æ”¶æ–‚å¿«é€Ÿä¹‹å¤–ï¼Œç”±æ–¼å…¶æœ¬èº«åªæœƒä½¿ç”¨åˆ°åŠ æ³•èˆ‡æ¸›æ³•ï¼Œåœ¨é‹ç®—ä¸Šä¹Ÿå¯ä»¥åŠ å¿«ã€‚ <br>
 
 </div>
 
 <br>
 
 <div style="text-align: left;">
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -144,7 +144,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 15 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void createfib(void);     // «Ø¥ß¶O¤ó¼Æ¦C <br>int findx(int, int);          // §äx­È <br>int fibsearch(int[], int);  // ¶O¤ó·j´M <br>void quicksort(int[], int, int);  // §Ö³t±Æ§Ç <br><br>int Fib[MAX] = {-999}; <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, find; <br><br>    srand(time(NULL)); <br><br>    for(i = 1; i &lt;= MAX; i++) { <br>        number[i] = rand() % 100; <br>    } <br><br>    quicksort(number, 1, MAX); <br><br>    printf("¼Æ¦C¡G"); <br>    for(i = 1; i &lt;= MAX; i++) <br>        printf("%d ", number[i]); <br><br>    printf("\n¿é¤J´M§ä¹ï¶H¡G"); <br>    scanf("%d", &amp;find); <br><br>    if((i = fibsearch(number, find)) &gt;= 0) <br>        printf("§ä¨ì¼Æ¦r©ó¯Á¤Ş %d ", i); <br>    else <br>        printf("\n§ä¤£¨ì«ü©w¼Æ"); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>// «Ø¥ß¶O¤ó¼Æ¦C <br>void createfib(void) { <br>    int i; <br><br>    Fib[0] = 0; <br>    Fib[1] = 1; <br><br>    for(i = 2; i &lt; MAX; i++) <br>        Fib[i] = Fib[i-1] + Fib[i-2]; <br>} <br><br>// §ä x ­È <br>int findx(int n, int find) { <br>    int i = 0; <br><br>    while(Fib[i] &lt;= n) <br>        i++; <br><br>    i--; <br>    return i; <br>} <br><br>// ¶O¦¡·j´M <br>int fibsearch(int number[], int find) { <br>    int i, x, m; <br><br>    createfib(); <br><br>    x  = findx(MAX+1,find); <br>    m = MAX - Fib[x]; <br>    printf("\nx = %d, m = %d, Fib[x] = %d\n\n", <br>                                     x, m, Fib[x]); <br><br>    x--; <br>    i = x; <br><br>    if(number[i] &lt; find) <br>        i += m; <br><br>    while(Fib[x] &gt; 0) { <br>        if(number[i] &lt; find) <br>            i += Fib[--x]; <br>        else if(number[i] &gt; find) <br>            i -= Fib[--x]; <br>        else <br>            return i; <br>    } <br>    return -1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int i, j, k, s; <br><br>    if(left &lt; right) { <br>        s = number[(left+right)/2]; <br>        i = left - 1; <br>        j = right + 1; <br><br>        while(1) { <br>            while(number[++i] &lt; s) ;  // ¦V¥k§ä <br>            while(number[--j] &gt; s) ;  // ¦V¥ª§ä <br>            if(i &gt;= j) <br>                break; <br>            SWAP(number[i], number[j]); <br>        } <br><br>        quicksort(number, left, i-1);   // ¹ï¥ªÃä¶i¦æ»¼°j <br>        quicksort(number, j+1, right);  // ¹ï¥kÃä¶i¦æ»¼°j <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 15 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>void createfib(void);     // å»ºç«‹è²»æ°æ•¸åˆ— <br>int findx(int, int);          // æ‰¾xå€¼ <br>int fibsearch(int[], int);  // è²»æ°æœå°‹ <br>void quicksort(int[], int, int);  // å¿«é€Ÿæ’åº <br><br>int Fib[MAX] = {-999}; <br><br>int main(void) { <br>    int number[MAX] = {0}; <br>    int i, find; <br><br>    srand(time(NULL)); <br><br>    for(i = 1; i &lt;= MAX; i++) { <br>        number[i] = rand() % 100; <br>    } <br><br>    quicksort(number, 1, MAX); <br><br>    printf("æ•¸åˆ—ï¼š"); <br>    for(i = 1; i &lt;= MAX; i++) <br>        printf("%d ", number[i]); <br><br>    printf("\nè¼¸å…¥å°‹æ‰¾å°è±¡ï¼š"); <br>    scanf("%d", &amp;find); <br><br>    if((i = fibsearch(number, find)) &gt;= 0) <br>        printf("æ‰¾åˆ°æ•¸å­—æ–¼ç´¢å¼• %d ", i); <br>    else <br>        printf("\næ‰¾ä¸åˆ°æŒ‡å®šæ•¸"); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>// å»ºç«‹è²»æ°æ•¸åˆ— <br>void createfib(void) { <br>    int i; <br><br>    Fib[0] = 0; <br>    Fib[1] = 1; <br><br>    for(i = 2; i &lt; MAX; i++) <br>        Fib[i] = Fib[i-1] + Fib[i-2]; <br>} <br><br>// æ‰¾ x å€¼ <br>int findx(int n, int find) { <br>    int i = 0; <br><br>    while(Fib[i] &lt;= n) <br>        i++; <br><br>    i--; <br>    return i; <br>} <br><br>// è²»å¼æœå°‹ <br>int fibsearch(int number[], int find) { <br>    int i, x, m; <br><br>    createfib(); <br><br>    x  = findx(MAX+1,find); <br>    m = MAX - Fib[x]; <br>    printf("\nx = %d, m = %d, Fib[x] = %d\n\n", <br>                                     x, m, Fib[x]); <br><br>    x--; <br>    i = x; <br><br>    if(number[i] &lt; find) <br>        i += m; <br><br>    while(Fib[x] &gt; 0) { <br>        if(number[i] &lt; find) <br>            i += Fib[--x]; <br>        else if(number[i] &gt; find) <br>            i -= Fib[--x]; <br>        else <br>            return i; <br>    } <br>    return -1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int i, j, k, s; <br><br>    if(left &lt; right) { <br>        s = number[(left+right)/2]; <br>        i = left - 1; <br>        j = right + 1; <br><br>        while(1) { <br>            while(number[++i] &lt; s) ;  // å‘å³æ‰¾ <br>            while(number[--j] &gt; s) ;  // å‘å·¦æ‰¾ <br>            if(i &gt;= j) <br>                break; <br>            SWAP(number[i], number[j]); <br>        } <br><br>        quicksort(number, left, i-1);   // å°å·¦é‚Šé€²è¡Œéè¿´ <br>        quicksort(number, j+1, right);  // å°å³é‚Šé€²è¡Œéè¿´ <br>    } <br>} <br></pre>
 
 
 <br>
@@ -158,7 +158,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>public class FibonacciSearch {<br>    public static int search(int[] number, int des) { <br>        int[] fib = createFibonacci(number.length); <br><br>        int x  = findX(fib, number.length+1, des); <br>        int m = number.length - fib[x]; <br>        x--; <br>        int i = x; <br><br>        if(number[i] &lt; des) <br>            i += m; <br><br>        while(fib[x] &gt; 0) { <br>            if(number[i] &lt; des) <br>                i += fib[--x]; <br>            else if(number[i] &gt; des) <br>                i -= fib[--x]; <br>            else <br>                return i; <br>        } <br>        <br>        return -1; <br><br>    }<br>    <br>    private static int[] createFibonacci(int max) {<br>        int[] fib = new int[max];<br>        for(int i = 0; i &lt; fib.length; i++) {<br>            fib[i] = Integer.MIN_VALUE;   <br>        }<br><br>        fib[0] = 0; <br>        fib[1] = 1; <br><br>        for(int i = 2; i &lt; max; i++) <br>            fib[i] = fib[i-1] + fib[i-2];<br>        <br>        return fib;<br>    }<br>    <br>    private static int findX(int[] fib, int n, int des) {<br>        int i = 0; <br><br>        while(fib[i] &lt;= n) <br>            i++; <br><br>        i--; <br>        <br>        return i;     <br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] number = {1, 4, 2, 6, 7, 3, 9, 8};<br>        <br>        QuickSort.sort(number);<br>        <br>        int find = Fibonacci.search(number, 3);<br>        <br>        if(find != -1) <br>            System.out.println("§ä¨ì¼Æ­È©ó¯Á¤Ş" + find); <br>        else <br>            System.out.println("§ä¤£¨ì¼Æ­È"); <br>    }<br>}</pre>
+<pre>public class FibonacciSearch {<br>    public static int search(int[] number, int des) { <br>        int[] fib = createFibonacci(number.length); <br><br>        int x  = findX(fib, number.length+1, des); <br>        int m = number.length - fib[x]; <br>        x--; <br>        int i = x; <br><br>        if(number[i] &lt; des) <br>            i += m; <br><br>        while(fib[x] &gt; 0) { <br>            if(number[i] &lt; des) <br>                i += fib[--x]; <br>            else if(number[i] &gt; des) <br>                i -= fib[--x]; <br>            else <br>                return i; <br>        } <br>        <br>        return -1; <br><br>    }<br>    <br>    private static int[] createFibonacci(int max) {<br>        int[] fib = new int[max];<br>        for(int i = 0; i &lt; fib.length; i++) {<br>            fib[i] = Integer.MIN_VALUE;   <br>        }<br><br>        fib[0] = 0; <br>        fib[1] = 1; <br><br>        for(int i = 2; i &lt; max; i++) <br>            fib[i] = fib[i-1] + fib[i-2];<br>        <br>        return fib;<br>    }<br>    <br>    private static int findX(int[] fib, int n, int des) {<br>        int i = 0; <br><br>        while(fib[i] &lt;= n) <br>            i++; <br><br>        i--; <br>        <br>        return i;     <br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] number = {1, 4, 2, 6, 7, 3, 9, 8};<br>        <br>        QuickSort.sort(number);<br>        <br>        int find = Fibonacci.search(number, 3);<br>        <br>        if(find != -1) <br>            System.out.println("æ‰¾åˆ°æ•¸å€¼æ–¼ç´¢å¼•" + find); <br>        else <br>            System.out.println("æ‰¾ä¸åˆ°æ•¸å€¼"); <br>    }<br>}</pre>
 
 <br>
 
