--- a/AlgorithmGossip/GCDPNumber.htm
+++ b/AlgorithmGossip/GCDPNumber.htm
@@ -21,14 +21,14 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
   
   
   
-  <title>³Ì¤j¤½¦]¼Æ¡B³Ì¤p¤½­¿¼Æ¡B¦]¦¡¤À¸Ñ</title>
+  <title>æœ€å¤§å…¬å› æ•¸ã€æœ€å°å…¬å€æ•¸ã€å› å¼åˆ†è§£</title>
 </head>
 
 
@@ -41,28 +41,28 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ³Ì¤j¤½¦]¼Æ¡B³Ì¤p¤½­¿¼Æ¡B¦]¦¡¤À¸Ñ</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: æœ€å¤§å…¬å› æ•¸ã€æœ€å°å…¬å€æ•¸ã€å› å¼åˆ†è§£</a></h1>
 
 
 
-<h2>»¡©ú</h2>
-³Ì¤j¤½¦]¼Æ¨Ï¥ÎÁÓÂà¬Û°£ªk¨Ó¨D¡A³Ì¤p¤½­¿¼Æ«h¥Ñ³o­Ó¤½¦¡¨Ó¨D¡G<br>
-<div style="margin-left: 40px;"><span style="font-weight: bold;">GCD * LCM = ¨â¼Æ­¼¿n</span><br>
+<h2>èªªæ˜</h2>
+æœ€å¤§å…¬å› æ•¸ä½¿ç”¨è¼¾è½‰ç›¸é™¤æ³•ä¾†æ±‚ï¼Œæœ€å°å…¬å€æ•¸å‰‡ç”±é€™å€‹å…¬å¼ä¾†æ±‚ï¼š<br>
+<div style="margin-left: 40px;"><span style="font-weight: bold;">GCD * LCM = å…©æ•¸ä¹˜ç©</span><br>
 </div>
-<h2>¸Ñªk</h2>
-³Ì¤j¤½¦]¼Æ¥i¥H¨Ï¥Î»¼°j»P«D»¼°j¨D¸Ñ¡A¦]¦¡¤À¸Ñ°ò¥»¤W´N¬O¨Ï¥Î¤p©ó¿é¤J¼Æªº¼Æ­È·í§@°£¼Æ¡A¥h°£¥H¿é¤J¼Æ­È¡A¦pªG¥i¥H¾ã°£´Nµø¬°¦]¼Æ¡A­n¤ñ¸û§Öªº¸Ñªk´N¬O¨D¥X¤p©ó¸Ó¼Æªº©Ò¦³½è¼Æ¡A¨Ã¸Õ¸Õ¬İ¬O¤£¬O¥i¥H¾ã°£¡A¨D½è¼Æªº°İÃD¬O¥t¤@­Ó½ÒÃD¡A½Ğ°Ñ¦Ò <a href="EratosthenesPrime.htm">Eratosthenes ¿z¿ï¨D½è¼Æ</a>¡C<br>
+<h2>è§£æ³•</h2>
+æœ€å¤§å…¬å› æ•¸å¯ä»¥ä½¿ç”¨éè¿´èˆ‡ééè¿´æ±‚è§£ï¼Œå› å¼åˆ†è§£åŸºæœ¬ä¸Šå°±æ˜¯ä½¿ç”¨å°æ–¼è¼¸å…¥æ•¸çš„æ•¸å€¼ç•¶ä½œé™¤æ•¸ï¼Œå»é™¤ä»¥è¼¸å…¥æ•¸å€¼ï¼Œå¦‚æœå¯ä»¥æ•´é™¤å°±è¦–ç‚ºå› æ•¸ï¼Œè¦æ¯”è¼ƒå¿«çš„è§£æ³•å°±æ˜¯æ±‚å‡ºå°æ–¼è©²æ•¸çš„æ‰€æœ‰è³ªæ•¸ï¼Œä¸¦è©¦è©¦çœ‹æ˜¯ä¸æ˜¯å¯ä»¥æ•´é™¤ï¼Œæ±‚è³ªæ•¸çš„å•é¡Œæ˜¯å¦ä¸€å€‹èª²é¡Œï¼Œè«‹åƒè€ƒ <a href="EratosthenesPrime.htm">Eratosthenes ç¯©é¸æ±‚è³ªæ•¸</a>ã€‚<br>
 
 
 
 <br>
-<h2> ¹ê§@¡]³Ì¤j¤½¦]¼Æ¡B³Ì¤p¤½­¿¼Æ¡^</h2>
+<h2> å¯¦ä½œï¼ˆæœ€å¤§å…¬å› æ•¸ã€æœ€å°å…¬å€æ•¸ï¼‰</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>int main(void) { <br>    int m, n, r; <br>    int s;<br><br>    printf("¿é¤J¨â¼Æ¡G"); <br>    scanf("%d %d", &amp;m, &amp;n); <br>    s = m * n;<br><br>    while(n != 0) { <br>        r = m % n; <br>        m = n; <br>        n = r; <br>    } <br><br>    printf("GCD¡G%d\n", m); <br>    printf("LCM¡G%d\n", s/m); <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>int main(void) { <br>    int m, n, r; <br>    int s;<br><br>    printf("è¼¸å…¥å…©æ•¸ï¼š"); <br>    scanf("%d %d", &amp;m, &amp;n); <br>    s = m * n;<br><br>    while(n != 0) { <br>        r = m % n; <br>        m = n; <br>        n = r; <br>    } <br><br>    printf("GCDï¼š%d\n", m); <br>    printf("LCMï¼š%d\n", s/m); <br><br>    return 0; <br>} <br></pre>
 
 <br>
 
@@ -74,28 +74,28 @@ Gossip@caterpillar</a></h3>
 <pre>public class GcdLcm {<br>    public static int gcdOf(int m, int n) {<br>        int r;<br>        <br>        while(n != 0) { <br>            r = m % n; <br>            m = n; <br>            n = r; <br>        }<br>        <br>        return m;<br>    }<br>    <br>    public static int lcmOf(int m, int n) {<br>        return m * n / gcdOf(m, n);<br>    }<br>    <br>    public static void main(String[] args) {<br>        System.out.println("GCD of (10, 4) = " + <br>                              GcdLcm.gcdOf(10, 4));<br>        System.out.println("LCM of (10, 4) = " + <br>                              GcdLcm.lcmOf(10, 4));<br>    }<br>} <br></pre>
 
 
-<h2> ¹ê§@¡]¦]¦¡¤À¸Ñ¡^</h2>
+<h2> å¯¦ä½œï¼ˆå› å¼åˆ†è§£ï¼‰</h2>
 
 <ul>
-  <li> C¡]¤£¥Î½è¼Æªí¡^
+  <li> Cï¼ˆä¸ç”¨è³ªæ•¸è¡¨ï¼‰
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>int main(void) { <br>    int i, n; <br><br>    printf("½Ğ¿é¤J¾ã¼Æ¡G"); <br>    scanf("%d", &amp;n); <br>    printf("%d = ", n); <br><br>    for(i = 2; i * i &lt;= n;) { <br>        if(n % i == 0) { <br>            printf("%d * ", i); <br>            n /= i; <br>        } <br>        else <br>            i++; <br>    } <br><br>    printf("%d\n", n); <br><br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>int main(void) { <br>    int i, n; <br><br>    printf("è«‹è¼¸å…¥æ•´æ•¸ï¼š"); <br>    scanf("%d", &amp;n); <br>    printf("%d = ", n); <br><br>    for(i = 2; i * i &lt;= n;) { <br>        if(n % i == 0) { <br>            printf("%d * ", i); <br>            n /= i; <br>        } <br>        else <br>            i++; <br>    } <br><br>    printf("%d\n", n); <br><br>    return 0; <br>} <br></pre>
 
 <br>
 
 <ul>
-  <li> C¡]¨Ï¥Î½è¼Æªí¡^
+  <li> Cï¼ˆä½¿ç”¨è³ªæ•¸è¡¨ï¼‰
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define N 1000 <br><br>int prime(int*);  // ¨D½è¼Æªí <br>void factor(int*, int);  // ¨Dfactor <br><br>int main(void) { <br>    int ptable[N+1] = {0}; <br>    int count, i, temp; <br><br>    count = prime(ptable); <br><br>    printf("½Ğ¿é¤J¤@¼Æ¡G"); <br>    scanf("%d", &amp;temp); <br>    factor(ptable, temp); <br><br>    printf("\n"); <br><br>    return 0; <br> } <br><br> int prime(int* pNum) { <br>    int i, j; <br>    int prime[N+1]; <br><br>    for(i = 2; i &lt;= N; i++) <br>        prime[i] = 1; <br><br>    for(i = 2; i*i &lt;= N; i++) { <br>        if(prime[i] == 1) { <br>            for(j = 2*i; j &lt;= N; j++) { <br>                if(j % i == 0) <br>                    prime[j] = 0; <br>            } <br>        } <br>    } <br><br>    for(i = 2, j = 0; i &lt; N; i++) { <br>        if(prime[i] == 1) <br>            pNum[j++] = i; <br>    } <br><br>    return j; <br>} <br><br>void factor(int* table, int num) { <br>    int i; <br><br>    for(i = 0; table[i] * table[i] &lt;= num;) { <br>        if(num % table[i] == 0) { <br>            printf("%d * ", table[i]); <br>            num /= table[i]; <br>        } <br>        else <br>            i++; <br>    } <br><br>    printf("%d\n", num); <br>}<br> <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define N 1000 <br><br>int prime(int*);  // æ±‚è³ªæ•¸è¡¨ <br>void factor(int*, int);  // æ±‚factor <br><br>int main(void) { <br>    int ptable[N+1] = {0}; <br>    int count, i, temp; <br><br>    count = prime(ptable); <br><br>    printf("è«‹è¼¸å…¥ä¸€æ•¸ï¼š"); <br>    scanf("%d", &amp;temp); <br>    factor(ptable, temp); <br><br>    printf("\n"); <br><br>    return 0; <br> } <br><br> int prime(int* pNum) { <br>    int i, j; <br>    int prime[N+1]; <br><br>    for(i = 2; i &lt;= N; i++) <br>        prime[i] = 1; <br><br>    for(i = 2; i*i &lt;= N; i++) { <br>        if(prime[i] == 1) { <br>            for(j = 2*i; j &lt;= N; j++) { <br>                if(j % i == 0) <br>                    prime[j] = 0; <br>            } <br>        } <br>    } <br><br>    for(i = 2, j = 0; i &lt; N; i++) { <br>        if(prime[i] == 1) <br>            pNum[j++] = i; <br>    } <br><br>    return j; <br>} <br><br>void factor(int* table, int num) { <br>    int i; <br><br>    for(i = 0; table[i] * table[i] &lt;= num;) { <br>        if(num % table[i] == 0) { <br>            printf("%d * ", table[i]); <br>            num /= table[i]; <br>        } <br>        else <br>            i++; <br>    } <br><br>    printf("%d\n", num); <br>}<br> <br></pre>
 
 <br>
 
 <ul>
-  <li> Java¡]¨Ï¥Î½è¼Æªí¡^
+  <li> Javaï¼ˆä½¿ç”¨è³ªæ•¸è¡¨ï¼‰
   </li>
 </ul>
 
